<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_surface_card_large"
    android:orientation="vertical"
    android:padding="20dp">

    <!--关闭-->
    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_dialog_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/recognition_failed"
        android:src="@drawable/ic_warning_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--标题-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/recognition_failed_title"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_error" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/recognition_failed_message"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!--按钮-->
    <com.snapreceipt.io.ui.widget.PrimaryActionButton
        android:id="@+id/return_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_small"
        android:layout_marginTop="24dp"
        android:text="@string/return_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        app:pabEnableShadow="false" />

</androidx.constraintlayout.widget.ConstraintLayout>
