<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bound_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/page_start_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bound_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/page_end_margin" />

    <com.snapreceipt.io.ui.widget.PageTitleBar
        android:id="@+id/page_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ptbTitleText="@string/personal_profile" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bound_right"
        app:layout_constraintStart_toStartOf="@id/bound_left"
        app:layout_constraintTop_toBottomOf="@id/page_header">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/img_app_icon"
            app:shapeAppearanceOverlay="@style/SnapReceiptCircleAvatarShape" />

        <!--姓名-->
        <com.snapreceipt.io.ui.widget.MeMenuItemView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:mmivSwapTitleValueStyle="true"
            app:mmivTitle="@string/name_label"
            app:mmivValueText="@string/placeholder_dash" />

        <!--邮箱-->
        <com.snapreceipt.io.ui.widget.MeMenuItemView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:mmivSwapTitleValueStyle="true"
            app:mmivTitle="@string/email_label"
            app:mmivValueText="@string/placeholder_dash" />

        <!--手机号-->
        <com.snapreceipt.io.ui.widget.MeMenuItemView
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:mmivSwapTitleValueStyle="true"
            app:mmivTitle="@string/mobile_number"
            app:mmivValueText="@string/placeholder_dash" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
